[fix]: get userInfo, overflow collapse title

--- a/styles/channel.module.scss
+++ b/styles/channel.module.scss
@@ -364,6 +364,7 @@
     justify-content: flex-start;
     gap: 8px;
     flex: 1;
+    max-width: 180px;
     &_name {
       width: 100%;
       display: inline-flex;
